[workspace]

members = [
    "app",
    "keyboard"
]

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
