[package]
name = "goboard-main"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1.0" }
embassy-executor = { version = "0.1.0", features = ["nightly", "defmt", "integrated-timers"]}
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
embassy-sync = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features= ["print-defmt"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl", "ble-sec", "ble-gatt-server", "ble-l2cap"] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = "0.7.1"
atomic-pool = "0.2.1"
static_cell = "1.0.0"
usbd-hid = "0.6.1"
keyboard = { path = "../keyboard" }

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }

