[package]
name = "goboard-main"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2021"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d", features = ["nightly", "defmt", "task-arena-size-32768", "arch-cortex-m", "integrated-timers", "executor-thread", "executor-interrupt"]}
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d", features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1"]}
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "871d82d" }
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features= ["print-defmt"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl", "ble-sec", "ble-gatt-server", "ble-l2cap"] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = "0.7.1"
atomic-pool = "0.2.1"
static_cell = "1.0.0"
usbd-hid = "0.6.1"
keyboard = { path = "../keyboard" }

