[package]
name = "keyboard"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2021"

[dependencies]
defmt = "0.3"
embassy-time = { version = "0.1.0", features = ["nightly"]}
embassy-sync = { version = "0.1.0" }

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"]}
embassy-time = { version = "0.1.0", features = ["nightly", "std", "generic-queue"]}
futures = "0.3.25"
futures-test = "0.3.25"
static_cell = "1.0"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", tag = "embassy-executor-v0.1.1" }

