[package]
name = "keyboard"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2021"

[dependencies]
defmt = "0.3"
embassy-time = { version = "0.1.0", features = ["nightly"]}
embassy-sync = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"]}
embassy-time = { version = "0.1.0", features = ["nightly", "std", "generic-queue"]}
env_logger = "0.10.0"
futures = "0.3.25"
futures-test = "0.3.25"
log = "0.4.17"
static_cell = "1.0"

